- Add simulation scripts for FPGA (design: pulpino in pulpino_wrap.sv) - Upgrading tcl script for compatibility with multiple tool version

--- a/sw/CMakeLists.txt
+++ b/sw/CMakeLists.txt
@@ -137,6 +137,10 @@ add_custom_target(vcompile.pl
   COMMAND tcsh -c "env PL_NETLIST=${PL_NETLIST} ./vcompile/vcompile_pl.csh"
   WORKING_DIRECTORY ${PULP_MODELSIM_DIRECTORY}
   ${USES_TERMINAL})
+add_custom_target(vcompile.arty
+  COMMAND tcsh -c "env PL_NETLIST=${PL_NETLIST} ./vcompile/build_fpga_sim.csh"
+  WORKING_DIRECTORY ${PULP_MODELSIM_DIRECTORY}
+  ${USES_TERMINAL})
 
 add_custom_target(vcompile.core.riscy
   COMMAND tcsh ./vcompile/vcompile_riscv.csh
