- Add setup.sh to define the FPGA boards. - Add dependencies to compile_simlib targets. The makefile will automatically   generate the hardware IPs based on board & part in setup.sh

--- a/fpga/sim/Makefile
+++ b/fpga/sim/Makefile
@@ -1,4 +1,8 @@
-compile_simlib:
+../ips/arty_mmcm/ip/arty_mmcm.dcp:
+	make -C ../ips/arty_mmcm
+../ips/xilinx_mem_8192x32/ip/xilinx_mem_8192x32.dcp:
+	make -C ../ips/xilinx_mem_8192x32
+compile_simlib: ../ips/arty_mmcm/ip/arty_mmcm.dcp ../ips/xilinx_mem_8192x32/ip/xilinx_mem_8192x32.dcp
 	tcsh ./vcompile/build_fpga_simlib.sh
 
 vcompile.fpga:
